workspace = { members = ["macros"] }
[package]
name = "avjason"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
finl_unicode = "1.2.0"

[dependencies.avjason-macros]
path = "./macros"
